# ws2811

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/ota/: CMakeLists.txt  ota.cpp  otac.c
components/ota/include/: ota.h  otac.h
components/ota/server_certs/: cert.pem
components/stairs/: CMakeLists.txt  stairs.cpp
components/stairs/include/: stairs.h
components/storage/: CMakeLists.txt  storage.cpp
components/storage/include/: storage.h
components/wifi/: CMakeLists.txt  Kconfig.projbuild  echoprocessor.cpp  tcpclient.cpp  tcpserver.cpp  udpserver.cpp  wifi.cpp
components/wifi/include/: echoprocessor.h  iprocessor.h  tcpclient.h  tcpserver.h  udpserver.h  wifi.h
components/ws2811/: CMakeLists.txt  ws2811.cpp
components/ws2811/include/: ws2811.h
main/: Kconfig.projbuild  main.cpp
